fix(style): fix layout issue that occurs before beer cards have loaded

--- a/public/styles/beers.scss
+++ b/public/styles/beers.scss
@@ -7,6 +7,8 @@
   justify-content: flex-start;
   flex-wrap: wrap;
 
+  min-height: 375px;
+
   gap: 80px;
 }
 
